--- a/package.json
+++ b/package.json
@@ -11,38 +11,39 @@
   },
   "dependencies": {
     "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "5.14.9",
-    "@mui/lab": "5.0.0-alpha.145",
-    "@mui/material": "5.14.10",
-    "@types/node": "20.6.3",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
-    "framer-motion": "10.16.4",
-    "next": "13.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@mui/icons-material": "5.15.17",
+    "@mui/lab": "5.0.0-alpha.170",
+    "@mui/material": "5.15.17",
+    "@types/node": "20.12.11",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
+    "framer-motion": "10.18.0",
+    "next": "13.5.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-qr-code": "2.0.12",
-    "typescript": "5.2.2"
+    "typescript": "5.4.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.7.3",
-    "@typescript-eslint/parser": "6.7.3",
-    "eslint": "8.49.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "eslint": "8.57.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-config-next": "13.5.2",
-    "eslint-config-prettier": "9.0.0",
+    "eslint-config-next": "13.5.6",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-mui-path-imports": "0.0.15",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react": "7.34.1",
+    "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-unicorn": "48.0.1",
-    "eslint-plugin-unused-imports": "3.0.0",
-    "prettier": "3.0.3"
-  }
+    "eslint-plugin-unused-imports": "3.2.0",
+    "prettier": "3.2.5"
+  },
+  "packageManager": "yarn@4.2.2"
 }
