--- a/package.json
+++ b/package.json
@@ -10,40 +10,39 @@
     "fmt": "pre-commit run --all-files"
   },
   "dependencies": {
-    "@emotion/cache": "11.11.0",
-    "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
-    "@mui/icons-material": "5.15.17",
-    "@mui/lab": "5.0.0-alpha.170",
-    "@mui/material": "5.15.17",
-    "@types/node": "20.12.11",
-    "@types/react": "18.3.2",
-    "@types/react-dom": "18.3.0",
-    "framer-motion": "11.1.9",
-    "next": "14.2.3",
+    "@emotion/cache": "11.13.1",
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@mui/icons-material": "6.1.6",
+    "@mui/lab": "6.0.0-beta.14",
+    "@mui/material": "6.1.6",
+    "@types/node": "22.8.7",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "framer-motion": "11.11.11",
+    "next": "15.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-qr-code": "2.0.12",
-    "typescript": "5.4.5"
+    "react-qr-code": "2.0.15",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
-    "eslint": "8.57.0",
+    "@typescript-eslint/eslint-plugin": "8.12.2",
+    "@typescript-eslint/parser": "8.12.2",
+    "eslint": "8.57.1",
     "eslint-config-airbnb": "19.0.4",
-    "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "15.0.2",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-mui-path-imports": "0.0.15",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.2",
-    "eslint-plugin-unicorn": "48.0.1",
-    "eslint-plugin-unused-imports": "3.2.0",
-    "prettier": "3.2.5"
+    "eslint-plugin-react": "7.37.2",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-unicorn": "56.0.0",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "prettier": "3.3.3"
   },
   "packageManager": "yarn@4.2.2"
 }
